# parent-tech-survey

./: .gitignore  README.md  pyproject.toml
src/parent_tech_survey/: Q1.ipynb  Q2.ipynb  data_prep.py  embeddings.py  explore_data.ipynb
